--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "netlify-cli": "^2.37.0"
   }
 }
