--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.13",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -20,7 +20,6 @@
     "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.5",
-    "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,7 +49,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "gh-pages": "^4.0.0",
-    "netlify-cli": "^2.37.0"
+    "netlify-cli": "^2.37.0",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3"
   }
 }
